--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <!-- Modal -->
-    <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal fade" id="connect-server-modal" role="dialog">
       <div class="modal-dialog">
 
         <!-- Modal content-->
@@ -65,7 +65,7 @@
                 <label for="new-server-addr">
                   Server Address
                 </label>
-                <input class="form-control" type="text" name="new-server-addr" id="new-server-addr" />
+                <input class="form-control" type="text" name="new-server-addr" id="new-server-addr" value="10.1.8.128"/>
               </div>
               <div class="form-group">
                 <label for="new-server-addr-port">
@@ -100,7 +100,7 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-success" id="passwd_submit">Connect</button>
+            <button type="button" class="btn btn-success" id="add_submit">Add Server</button>
             <button type="button" class="btn btn-default" id="clear_passwd" data-dismiss="modal">Close</button>
           </div>
         </div>
