--- a/terminal.html
+++ b/terminal.html
@@ -3,9 +3,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
     <title id="console-name">HTML5 Web Terminal___</title>
-    <link href="http://fonts.googleapis.com/css?family=Inconsolata"
-          rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="../css/terminal.css" />
+    <link rel="stylesheet" type="text/css" href="css/terminal.css" />
 </head>
 <body>
 <div id="container">
@@ -18,7 +16,6 @@
 <!--<script src="http://www.codehelper.io/api/ips/?js"></script>-->
 <script>  window.$ = window.jQuery = require('./node_modules/jquery/dist/jquery.min.js');</script>
 <script src="terminal.js"></script>
-<script src="terminal-app.js"></script>
 
 </body>
 </html>
