--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <label for="new-server-addr">
                   Server Address
                 </label>
-                <input class="form-control" type="text" name="new-server-addr" id="new-server-addr" value="10.1.8.128"/>
+                <input class="form-control" type="text" name="new-server-addr" id="new-server-addr" value="10.1.8.138"/>
               </div>
               <div class="form-group">
                 <label for="new-server-addr-port">
@@ -82,7 +82,7 @@
                     Use a default username
                   </label>
                 </div>
-                <input class="form-control" type="text" id="add_serv_username" placeholder="eg root" />
+                <input class="form-control" type="text" id="add_serv_username" placeholder="eg root" value="root"/>
               </div>
               <div class="form-group">
                 <div class="checkbox checkbox-primary">
