--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <body>
     <div class="container">
       <a class="btn btn-info btn-block" id="add-server-btn"><span class="glyphicon glyphicon-plus"></span> Add SSH Server</a>
-      <a class="btn btn-default btn-block"><span class="glyphicon glyphicon-wrench"></span> Options</a>
+      <!-- <a class="btn btn-default btn-block"><span class="glyphicon glyphicon-wrench"></span> Options</a> -->
       <br />
       <div class="list-group">
-        <a href="#" class="list-group-item">
+       <!-- <a href="#" class="list-group-item">
           <h4 class="list-group-item-heading">Default Localhost SSH</h4>
           <p class="list-group-item-text">root@127.0.0.1</p>
           <a class="btn btn-link"><span class="glyphicon glyphicon-cog"></span> Configure</a>
           <a class="btn btn-link" name="run-terminal" ssh-server="127.0.0.1" ssh-user="root" ssh-name="Default Localhost SSH"><span class="glyphicon glyphicon-download-alt"></span> Run</a>
-        </a>
+        </a> -->
       </div>
     </div>
     <!-- Modal -->
@@ -68,23 +68,28 @@
                 <input class="form-control" type="text" name="new-server-addr" id="new-server-addr" value="10.1.8.138"/>
               </div>
               <div class="form-group">
-                <label for="new-server-addr-port">
+                <label for="new-server-port">
                   Server Port
                 </label>
                 <div class="stepper">
-                  <input type="number" class="form-control" id="new-server-addr-port" value="22"/>
+                  <input type="number" class="form-control" id="new-server-port" value="22"/>
                 </div>
               </div>
+
               <div class="form-group">
-                <div class="checkbox checkbox-primary">
+                <!-- <div class="checkbox checkbox-primary">
                   <input type="checkbox" id="checkbox6" >
                   <label for="checkbox6">
                     Use a default username
                   </label>
-                </div>
+                </div> -->
+                <label for="add_serv_username">
+                  Username
+                </label>
                 <input class="form-control" type="text" id="add_serv_username" placeholder="eg root" value="root"/>
               </div>
-              <div class="form-group">
+
+              <!-- <div class="form-group">
                 <div class="checkbox checkbox-primary">
   						    <input type="checkbox" id="checkbox4" disabled>
   						    <label for="checkbox4">
@@ -96,6 +101,13 @@
                     In order to remember passwords, you must set a master password in Options.
                   </small>
                 </span>
+              </div>
+            -->
+              <div class="form-group">
+                <label for="new-server-pass">
+                  Password
+                </label>
+                <input class="form-control" type="password" id="new-server-pass" />
               </div>
             </form>
           </div>
